[package]
name = "skiff"
description = "An immutability-first, functional scripting language with a friendly syntax and compiler/interpreter written in Rust!"
homepage = "https://skiff.paulbiberstein.me/"
documentation = "https://github.com/P-bibs/skiff"
repository = "https://github.com/P-bibs/skiff"
readme = "README.md"
license = "MIT"
version = "0.3.0"
authors = ["Paul Biberstein <biberstein.paul@gmail.com>"]
edition = "2018"
keywords = ["interpreters", "wasm", "programming-language", "cli"]
categories = ["compilers", "parser-implementations", "web-programming"]

[features]
default = ["console_error_panic_hook"]

# [lib]
# crate-type = ["cdylib"]

[dependencies]
logos = "0.12.0"
structopt = "0.3.13"
im = "15.0.0"
colored = "2"
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
